2008-01-24 Sarka Todorova <sarka.todorova@cern.ch>
	* add option to load MSEntry from TrackingVolumesSvc
	* bugfix in MIMB (volume bounds called after delete )
	* tagged as MuonTrackingGeometry-00-01-05

2008-01-22 Sarka Todorova <sarka.todorova@cern.ch>
	* fix configuration python file
	* tagged as MuonTrackingGeometry-00-01-04

2008-01-21 Sarka Todorova <sarka.todorova@cern.ch>
	* configuration python file
	* tagged as MuonTrackingGeometry-00-01-03

2008-01-15 Sarka Todorova <sarka.todorova@cern.ch>
	* added configuration file; to be used both by muon-standalone and combined geometry
	* tagged as MuonTrackingGeometry-00-01-02

2008-01-09 Sarka Todorova <sarka.todorova@cern.ch>
	* change gluing order in MTGB (temporary solution, better to fix it in TrackingVolumeHelper )
	* 3D partition runs into infinite loops, probably due to bug in BevelledCylinderVolumeBounds, use 2D partition as default till fixed
	* tagged as MuonTrackingGeometry-00-01-01

2008-01-08 Sarka Todorova <sarka.todorova@cern.ch>
	* code simplified inert material (optional)
	* add various options (resize,rescale, blend material into static volume material properties), not all have public switch yet
	* tagged as MuonTrackingGeometry-00-01-00

2007-12-29 Sarka Todorova <sarka.todorova@cern.ch>
	* fix memory leaks in MSB/MSTB
	* fix material scaling for station layer representation
	* tagged as MuonTrackingGeometry-00-00-65
	
2007-12-20 Sarka Todorova <sarka.todorova@cern.ch>
        * change static frame : adapt to shieldings, suppress cavern cutouts
        * 3D binning functional in combined geometry
	* recover from mismatch of enclosed envelope/glue volumes dimensions 
	* tagged as MuonTrackingGeometry-00-00-64

2007-12-17 Sarka Todorova <sarka.todorova@cern.ch>
        * bugfix 3D static volume binning
	* introduce radial span 
	* tagged as MuonTrackingGeometry-00-00-63

2007-12-14 Sarka Todorova <sarka.todorova@cern.ch>