@@ -1,3 +1,7 @@
+2008-01-29 Sarka Todorova <sarka.todorova@cern.ch>
+	* don't retrieve TrackingVolumesSvc unless needed (suppress error messages)
+	* tagged as MuonTrackingGeometry-00-01-06
+
 2008-01-24 Sarka Todorova <sarka.todorova@cern.ch>
 	* add option to load MSEntry from TrackingVolumesSvc
 	* bugfix in MIMB (volume bounds called after delete )
